<resources>
    <string name="app_name">BuzzTalk</string>
    <string name="post">POST</string>
    <string name="post_hint">Share your thoughts</string>
    <string name="buzz">Buzz</string>
    <string name="talk">Talk</string>
    <string name="likes">Likes</string>
    <string name="more_btn">more_btn</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="sharing">Sharing</string>
    <string name="app_activity">App Activity</string>
    <string name="navigation_close">Open Navigation drawer</string>
    <string name="navigation_open">Close Navigation drawer</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="dont_delete">Don\'t Delete</string>
    <string name="dialog_text_1">This action cannot be undone!</string>
    <string name="dialog_text_2">Logout of BuzzTalk?</string>
    <string name="privacy_policy_link">https://nabsportfolio.000webhostapp.com/PrivacyPolicy.html</string>
    <string name="space" />
    <string name="_0_post">0\nPost</string>
    <string name="username">username</string>
    <string name="learn_more">Learn More</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="posting">Posting...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="dot">·</string>
    <string name="_0">0</string>
    <string name="no_comments">No Comments</string>
    <string name="report">report</string>
    <string name="sign_in">Sign in</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
</resources>