<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileDetails"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"
            />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/app_activity">
            <menu>
                <item
                    android:icon="@drawable/ic_baseline_privacy_tip_24"
                    android:id="@+id/privacyPolicy"
                    android:title="@string/privacy_policy"
                    />
                <item
                    android:id="@+id/logOutBtn"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    />
            </menu>
        </item>
    </group>

    <item android:title="@string/sharing">
        <menu>
            <item
                android:id="@+id/shareApp"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"
                />
        </menu>
    </item>

</menu>