<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtAreYouSure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white_1"
            android:textSize="24sp"
            tools:text="@string/areYouSure" />

        <TextView
            android:id="@+id/txtForDeleteDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAreYouSure"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/white_1"
            android:textSize="15sp"
            tools:text="@string/dialog_text_1" />

        <View
            android:id="@+id/viewDividerForDialog"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txtForDeleteDialog"
            android:layout_marginTop="15dp"
            android:background="@color/white_1" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewDividerForDialog"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/delete"
            android:textColor="@color/white_1" />

        <View
            android:id="@+id/viewDividerForBtn"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/confirm_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white_1" />

        <Button
            android:id="@+id/deny_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewDividerForBtn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/dont_delete"
            android:textColor="@color/white_1" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>